# ROSSi

./: .gitignore  LICENSE  README.md
ROSSi_workspace/rossi_plugin/: package.xml  plugin.xml  setup.py
ROSSi_workspace/rossi_plugin/resource/: RosGraph.ui  library.ui  main.ui  settings.ui
ROSSi_workspace/rossi_plugin/src/rossi_plugin/: Window.py
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Ros2UI/: utils.py
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Ros2UI/CodeGenerator/: CodeGeneratorLaunch.py  GraphToJson.py  Processrunner.py
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Ros2UI/Representations/Python3Representations/: ModuleRep.py
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Ros2UI/Representations/Ros2Representations/: RosPackage.py  RosQOS.py  RosTopic.py
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Ros2UI/UI/: treetest.py
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Ros2UI/UI/BaseGraphEntities/: AbstractGraphEntity.py  AbstractGraphPortEntity.py  GraphEntryPort.py  GraphExitPort.py  GraphLine.py  GraphMultipleEntryPort.py  GraphTemporaryDot.py  ResizableGraphEntity.py  StandartGraphEntity.py
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Ros2UI/UI/UIElements/: Accordion.py  DialogWindow.py  InteractiveGraphicsScene.py  InteractiveGraphicsView.py  LibraryWindow.py  PluginTab.py
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Ros2UI/UI/Views/: settings.ui
ROSSi_workspace/rossi_plugin/src/rossi_plugin/Sniffer/: BuiltInSniffer.py  Example2.py  GraphEntity.py  IPythonSniffer.py  OperatorSniffer.py  PkgutilSniffer.py  ROS2Sniffer.py  main.py
(+20 files in other folders)
