<package format="2">
  <name>rossi_plugin</name>
  <version>0.1.0</version>
  <description>A Python GUI plugin to develop ROS 2 projects.</description>
  <maintainer email="rossi@isse.de">Sebastian Rossi</maintainer>
  <author>Sebastian Rossi</author>

  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
